--- a/estilo2.css
+++ b/estilo2.css
@@ -23,11 +23,12 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    gap: 10px;
     padding: 10px 0        /** o 0 é a medida para os lados**/
 }
 
 main div{
-    width: 33%;
+    width: 30%;
     background-color: #8ddcdb;
     height: 100%;
 }
@@ -57,12 +58,13 @@ align-items: center;
         height: auto;
     }
     main div {
+        height: 100vh;
         width: 45%
     }
 }
 
 @media(max-width: 576px){
     main div {
-        width: 100%
+        width: 98%
     }
 }
