--- a/estilo2.css
+++ b/estilo2.css
@@ -92,11 +92,12 @@ footer{
 
 .textc3 {
     font-size: 13px;
-    text-align: center;
     font-style: italic;
     text-align: center;
-    padding-top: 5px;
     color: #1b7646;
+    position: absolute;
+    bottom: 45px;
+    padding: 5px;
 }
 .titulo {
 display: flex;
@@ -108,13 +109,12 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .imagens{
-    bottom: 80px;
+    bottom: 90px;
     position: absolute;
-    width: 490px;
-    padding: 10px;
+    width: 490px
 }
 
-.imagens{
+img{
     max-width: 32.5%;
     height: auto;
 }
